Fix mobile website overflow

--- a/website/src/styles/global.css
+++ b/website/src/styles/global.css
@@ -123,10 +123,12 @@
     }
   body {
     @apply bg-background text-foreground;
+    overflow-x: clip;
     }
   html {
     @apply font-sans;
     scroll-behavior: smooth;
+    overflow-x: clip;
     }
 }
 
